Update to engine version 1.6